--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "Cuber",
   "version": "0.0.1",
   "dependencies": {
-    "coffee-script": "1.2.0",
-    "zappa": "0.3.3"
+    "coffee-script": ">=1.2.0",
+    "zappa": ">=0.3.3"
+  }
+  "engines": {
+  	"node": "0.6.x",
+  	"npm": "1.1x"
   }
 }
