--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "dependencies": {
     "coffee-script": ">=1.2.0",
-    "zappa": ">=0.3.3"
+    "zappa": ">=0.3.3",
+	"mongoose": ">=2.6.0"
   },
   "engines": {
   	"node": "0.6.x",
