--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "coffee-script": ">=1.2.0",
     "zappa": ">=0.3.3",
 	"mongoose": ">=2.6.0",
-	"monk": "0.1.7"
+	"monk": "0.1.7",
+	"cli-table": "0.0.2",
+	"colorize": "0.1.0"
   },
   "engines": {
   	"node": "0.6.x",
