--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "dependencies": {
     "coffee-script": ">=1.2.0",
     "zappa": ">=0.3.3",
-	"mongoose": ">=2.6.0",
 	"monk": "0.1.7",
 	"cli-table": "0.0.2",
 	"colorize": "0.1.0",
-	"mongodb": "1.0.1"
+	"prompt": "0.1.12"
   },
   "engines": {
   	"node": "0.6.x",
