--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "Cuber",
   "version": "0.2.0",
   "dependencies": {
-    "coffee-script": ">=1.2.0",
-    "zappa": ">=0.3.3",
+    "coffee-script": "1.2.x",
+    "zappa": "0.3.x",
 	"monk": "0.1.8",
-	"cli-table": "0.0.2",
-	"colorize": "0.1.0",
-	"prompt": "0.1.12"
+	"cli-table": "0.0.x",
+	"colorize": "0.1.x",
+	"prompt": "0.1.x",
+	"console-trace": "0.1.x",
+	"underscore": "1.3.x",
+	"underscore.string": "2.2.x"
   },
   "engines": {
   	"node": "0.6.x",
