--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 		"prompt": "0.1.x",
 		"console-trace": "0.1.x",
 		"underscore": "1.3.x",
-		"underscore.string": "2.2.x",
+		"underscore.string": "2.2.x"
 	},
 	"engines": {
 		"node": "0.6.x",
